--- a/presentation/src/main/res/layout/profile_fragment.xml
+++ b/presentation/src/main/res/layout/profile_fragment.xml
@@ -1,58 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_horizontal"
-        tools:context=".view.ProfileFragment">
-
-    <ImageView
-            android:layout_width="@dimen/image_size"
-            android:layout_height="@dimen/image_size"
-            android:src="@drawable/default_profile"/>
-
-
-    <TextView
-            android:id="@+id/name_text"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+    <LinearLayout
+            android:id="@+id/llProfile"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            tools:context=".view.ProfileFragment">
+
+        <ImageView
+                android:id="@+id/img_profile"
+                android:layout_width="@dimen/image_size"
+                android:layout_height="@dimen/image_size"
+                android:src="@drawable/default_profile"/>
 
 
-    <TextView
-            android:id="@+id/grade_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+        <TextView
+                android:id="@+id/name_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
 
-    <TextView
-            android:id="@+id/address_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    <TextView
-            android:id="@+id/email_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+        <TextView
+                android:id="@+id/grade_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
-    <TextView
-            android:id="@+id/phone_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
 
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content">
+        <TextView
+                android:id="@+id/address_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        <TextView
+                android:id="@+id/email_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
-        <Button android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/experience"/>
+        <TextView
+                android:id="@+id/phone_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
-        <Button android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/skills"/>
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content">
+
+            <Button android:id="@+id/btnExperience"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/experience"/>
+
+            <Button android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/skills"/>
+        </LinearLayout>
+
+
     </LinearLayout>
 
+    <FrameLayout android:id="@+id/fm_error"
+                 android:background="@android:color/white"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent">
 
-</LinearLayout>
+        <TextView
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/error_message"/>
+    </FrameLayout>
+
+    <FrameLayout android:id="@+id/fm_loading"
+                 android:background="@android:color/white"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent">
+
+        <ProgressBar android:layout_gravity="center"
+                     android:layout_width="50dp"
+                     android:layout_height="50dp"/>
+    </FrameLayout>
+</RelativeLayout>
