--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
-        android:id="@+id/view"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".view.MainActivity">
 
-    <fragment android:id="@+id/fragment_profile"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              class="com.globant.cv_fpv.view.ProfileFragment"/>
+    <fragment
+            android:id="@+id/fragment_profile"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            class="com.globant.cv_fpv.view.ProfileFragment"/>
 </FrameLayout>
