--- a/presentation/src/main/res/layout/profile_fragment.xml
+++ b/presentation/src/main/res/layout/profile_fragment.xml
@@ -4,18 +4,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
     <LinearLayout
-            android:id="@+id/llProfile"
+            android:id="@+id/ll_profile"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center_horizontal"
+            android:layout_margin="@dimen/medium_padding"
             tools:context=".view.ProfileFragment">
 
         <ImageView
                 android:id="@+id/img_profile"
                 android:layout_width="@dimen/image_size"
                 android:layout_height="@dimen/image_size"
-                android:src="@drawable/default_profile"/>
+                android:src="@drawable/default_profile"
+                tools:ignore="ContentDescription"/>
 
 
         <TextView
@@ -47,16 +49,19 @@
         <LinearLayout android:layout_width="match_parent"
                       android:layout_height="wrap_content">
 
-            <Button android:id="@+id/btnExperience"
+            <Button android:id="@+id/btn_experience"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/experience"/>
+                    android:text="@string/experience"
+                    tools:ignore="ButtonStyle"/>
 
-            <Button android:layout_width="0dp"
+            <Button android:id="@+id/btn_skills"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/skills"/>
+                    android:text="@string/skills"
+                    tools:ignore="ButtonStyle"/>
         </LinearLayout>
 
 
