--- a/presentation/src/main/res/layout/skill_item.xml
+++ b/presentation/src/main/res/layout/skill_item.xml
@@ -24,32 +24,21 @@
                 android:orientation="vertical">
 
             <TextView
-                    android:id="@+id/job_text"
+                    android:id="@+id/skill_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingBottom="@dimen/medium_padding"
                     android:textSize="@dimen/big_text"/>
 
-            <TextView
-                    android:id="@+id/company_text"
+            <ProgressBar
+                    android:id="@+id/proficiency_progress"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingBottom="@dimen/small_padding"
-                    android:textSize="@dimen/medium_text"/>
+                    android:textSize="@dimen/medium_text"
+                    style="?android:attr/progressBarStyleHorizontal"
+            />
 
-            <TextView
-                    android:id="@+id/range_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="@dimen/medium_padding"
-                    android:textSize="@dimen/medium_text"/>
-
-            <TextView
-                    android:id="@+id/description_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="@dimen/small_padding"
-                    android:textSize="@dimen/small_text"/>
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
