--- a/presentation/src/main/res/layout/skills_fragment.xml
+++ b/presentation/src/main/res/layout/skills_fragment.xml
@@ -13,6 +13,6 @@
             android:id="@+id/recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/experience_item"/>
+            tools:listitem="@layout/skill_item"/>
 
 </LinearLayout>
