--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -2,4 +2,13 @@
 <resources>
     <dimen name="image_size">150dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="card_margin">1dp</dimen>
+    <dimen name="corner_radius">3dp</dimen>
+    <dimen name="elevation">4dp</dimen>
+    <dimen name="card_margin_top">8dp</dimen>
+    <dimen name="big_text">24sp</dimen>
+    <dimen name="medium_text">18sp</dimen>
+    <dimen name="small_text">14sp</dimen>
+    <dimen name="medium_padding">10dp</dimen>
+    <dimen name="small_padding">5dp</dimen>
 </resources>
